sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ';' expected but ',' found.
      L(i+1),L(i)=L(i),L(i+1)
            ^