sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-1 to 10){
    if (L(i)>L(i+1)){
      L(i+1),L(i)=L(i),L(i+1)
    }
    
  }
}